[gd_scene load_steps=7 format=3 uid="uid://br2s8x0obq6xq"]

[ext_resource type="Script" uid="uid://be2072d7i4ug0" path="res://scenes_and_scripts/characters/viciousivy.gd" id="1_0yfij"]
[ext_resource type="SpriteFrames" uid="uid://bda0u5e5m8iss" path="res://assets/spriteframes/vicious_ivy.tres" id="2_0yfij"]
[ext_resource type="AudioStream" uid="uid://jp50qxyns17k" path="res://assets/sounds/squish.wav" id="3_u6ueu"]
[ext_resource type="AudioStream" uid="uid://dwa8onc3iijt5" path="res://assets/sounds/fall.wav" id="4_268yh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xuiww"]
size = Vector2(27, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lufqx"]
size = Vector2(27, 26)

[node name="ViciousIvy" type="CharacterBody2D"]
z_index = 49
collision_layer = 128
collision_mask = 9
floor_max_angle = 1.48353
floor_snap_length = 15.0
script = ExtResource("1_0yfij")

[node name="Image" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_0yfij")
animation = &"walk"
centered = false

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(18.5, 26)
shape = SubResource("RectangleShape2D_xuiww")

[node name="WallDetection" type="RayCast2D" parent="."]
position = Vector2(18, 20)
target_position = Vector2(-15, 0)
collision_mask = 13

[node name="SquishSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_u6ueu")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(18.5, 26)
shape = SubResource("RectangleShape2D_lufqx")

[node name="FallSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_268yh")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-64, 0)
rect = Rect2(-32, -96, 224, 224)

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
